# RV32I-Pipeline

./: .gitignore  README.md
compiler/: program.asm  program.c  program_opcodes.json  pyproject.toml
compiler/minicc/: __init__.py  __main__.py  ast_nodes.py  codegen.py  errors.py  ir.py  isa.py  lexer.py  parser.py  regalloc.py
compiler/tests/: test_codegen.py  test_errors.py  test_lexer.py  test_parser.py  test_regalloc.py
sim/: Makefile  asm_data_to_dmem.py  asm_to_mem.py  design.cr.mti  design.mpf  json_to_dmem.py  json_to_imem.py  tb_advanced.sv  tb_top.sv  transcript  vsim.wlf
sim/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qtl  _lib1_11.qdb  _lib1_11.qtl
sim/work/@_opt/: _lib.qdb  _lib1_0.qdb  _lib1_0.qpg  _lib1_0.qtl  _lib1_2.qdb  _lib1_2.qtl  _lib2_0.qdb  _lib2_0.qtl  _lib2_2.qdb  _lib2_2.qpg  _lib2_2.qtl  _lib3_0.qdb  _lib3_0.qtl  _lib3_2.qdb  _lib3_2.qtl  _lib4_0.qdb  _lib4_0.qpg  _lib4_0.qtl  _lib4_2.qdb  _lib4_2.qpg  _lib4_2.qtl
sim/work/@_opt/_data/: exempt3LhKsz  exempt7Sz0lf  exempt7xFbLT  exemptD6T6oB  exemptWn0aL0  exemptxPPCzE  exemptzWiFeS
sim/work/@_opt/_viscom/: .env_list_file  .viscom_elab_file  _info
src/: control_unit.sv  decode.sv  defines.svh  execute.sv  fetch.sv  memory.sv  tb_top.sv  top.sv  write_back.sv
