[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "minicc"
version = "0.1.0"
description = "C-like compiler for custom MIPS-style ISA"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["minicc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
